5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3988/executions/1635_2447.log
== TEST (2019-04-10 13:48:49) 
-- CODE:
x = float(input("v:"))
y = float(input("t:"))
if (x>y):
	f = "falta "round(x-y, 2)
else:
	f = "troco de "round(y-x, 2)
print(f)	
-- ERROR:
File "XXXX", line 4
    f = "falta "round(x-y, 2)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 13:49:28) 
-- CODE:
x = float(input("v:"))
y = float(input("t:"))
if (x>y):
	f = "falta "(x-y)
else:
	f = "troco de "(y-x)
print(f)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    f = "falta "(x-y)
TypeError: 'str' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 13:49:43) 
-- CODE:
x = float(input("v:"))
y = float(input("t:"))
if (x>y):
	f = "falta "(x-y)
else:
	f = "troco de "(y-x)
print(f)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    f = "falta "(x-y)
TypeError: 'str' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 13:50:04) 
-- CODE:
x = float(input("v:"))
y = float(input("t:"))
if (x>y):
	f = "falta "(x - y)
else:
	f = "troco de "(y - x)
print(f)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    f = "falta "(x - y)
TypeError: 'str' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 13:50:56) 
-- CODE:
x = float(input("v:"))
y = float(input("t:"))
if (x>y):
	f = ("falta ")x - y
else:
	f = ("troco de ")y - x
print(f)	
-- ERROR:
File "XXXX", line 4
    f = ("falta ")x - y
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 13:56:53) 
-- CODE:
x = float(input("v:"))
y = float(input("t:"))
if (x > y):
	f = round((x - y), 2)
	print("falta ", f)
else:
	d = round((y - x), 2)
   print("troco de ", d)	
-- ERROR:
File "XXXX", line 8
    print("troco de ", d)	
                         ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 13:57:15) 
-- CODE:
x = float(input("v:"))
y = float(input("t:"))
if (x > y):
	f = round((x - y), 2)
	print("falta", f)
else:
	d = round((y - x), 2)
   print("troco de", d)	
-- ERROR:
File "XXXX", line 8
    print("troco de", d)	
                        ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 13:57:41) 
-- CODE:
x = float(input("v:"))
y = float(input("t:"))
if (x > y):
	f = (round((x - y), 2))
	print("falta", f)
else:
	d = (round((y - x), 2))
   print("troco de", d)	
-- ERROR:
File "XXXX", line 8
    print("troco de", d)	
                        ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 13:57:58) 
-- CODE:
x = float(input("v:"))
y = float(input("t:"))
if (x > y):
	f = (round((x - y), 2))
	print("Falta", f)
else:
	d = (round((y - x), 2))
   print("Troco de", d)	
-- ERROR:
File "XXXX", line 8
    print("Troco de", d)	
                        ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 13:58:44) 
-- CODE:
x = float(input("v:"))
y = float(input("t:"))
if (x > y):
	f = (round(x - y, 2))
	print("Falta", f)
else:
	d = (round(y - x, 2))
   print("Troco de", d)	
-- ERROR:
File "XXXX", line 8
    print("Troco de", d)	
                        ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 14:00:43) 
-- CODE:
x = float(input("v:"))
y = float(input("t:"))
if (x > y):
	f = (round(x - y, 2))
	print("Falta", f)
else:
	f = (round(y - x, 2))
   print("Troco de", f)	
-- EXECUTION TIME:
0.232472
-- ERROR:
  File "/home/codebench/codes/1635/2447/main.py", line 8
    print("Troco de", f)	
                        ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 14:00:48) 
-- CODE:
x = float(input("v:"))
y = float(input("t:"))
if (x > y):
	f = (round(x - y, 2))
	print("Falta", f)
else:
	f = (round(y - x, 2))
   print("Troco de", f)	
-- ERROR:
File "XXXX", line 8
    print("Troco de", f)	
                        ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 14:00:50) 
-- CODE:
x = float(input("v:"))
y = float(input("t:"))
if (x > y):
	f = (round(x - y, 2))
	print("Falta", f)
else:
	f = (round(y - x, 2))
   print("Troco de", f)	
-- ERROR:
File "XXXX", line 8
    print("Troco de", f)	
                        ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 14:00:51) 
-- CODE:
x = float(input("v:"))
y = float(input("t:"))
if (x > y):
	f = (round(x - y, 2))
	print("Falta", f)
else:
	f = (round(y - x, 2))
   print("Troco de", f)	
-- ERROR:
File "XXXX", line 8
    print("Troco de", f)	
                        ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 14:01:46) 
-- CODE:
x = float(input("v:"))
y = float(input("t:"))
if (x > y):
	f = (round(x - y, 2))
	print("Falta ", f)
else:
	f = (round(y - x, 2))
   print("Troco de", f)	
-- EXECUTION TIME:
0.198163
-- ERROR:
  File "/home/codebench/codes/1635/2447/main.py", line 8
    print("Troco de", f)	
                        ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 14:01:47) 
-- CODE:
x = float(input("v:"))
y = float(input("t:"))
if (x > y):
	f = (round(x - y, 2))
	print("Falta ", f)
else:
	f = (round(y - x, 2))
   print("Troco de", f)	
-- ERROR:
File "XXXX", line 8
    print("Troco de", f)	
                        ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 14:02:43) 
-- CODE:
x = float(input("v:"))
y = float(input("t:"))
if (x > y):
	f = (round(x - y, 2))
	print("Falta ", f)
else:
	f = (round(y - x, 2))	
	print("Troco de", f)	
-- EXECUTION TIME:
0.217449
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
Falta  26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
Troco de 28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
Troco de 0.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
